Regression: Boundary Propagation doesn't work #102584

Closed
opened 2022-11-17 14:36:34 +01:00 by Julien Kaspar · 9 comments
Member

System Information
Operating system: Linux-5.15.0-52-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.85.02

Blender Version
Broken: version: 3.4.0 beta / 3.5.0 Alpha, branch: master, commit date: 2022-11-17 09:12, hash: dd260d2f03
Worked: 3.3
Caused by 02575bcbd0

Short description of error
When using the auto-masking modes like "Mesh Boundary" and "Face Set Boundaries", there is an additional setting for "Propagation Steps".
Currently if the propagation steps are higher than 0, the sculpting brushes have no effect anymore.

Exact steps for others to reproduce the error

  • Add a sphere
  • Enter sculpt mode
  • Create some face sets with the "Draw Face Sets" brush
  • In the header open the Auto-Masking popover and enable "Face Set Boundary" and increase the Propagation Steps
  • Try to sculpt on the sphere
**System Information** Operating system: Linux-5.15.0-52-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.85.02 **Blender Version** Broken: version: 3.4.0 beta / 3.5.0 Alpha, branch: master, commit date: 2022-11-17 09:12, hash: `dd260d2f03` Worked: 3.3 Caused by 02575bcbd0 **Short description of error** When using the auto-masking modes like "Mesh Boundary" and "Face Set Boundaries", there is an additional setting for "Propagation Steps". Currently if the propagation steps are higher than 0, the sculpting brushes have no effect anymore. **Exact steps for others to reproduce the error** - Add a sphere - Enter sculpt mode - Create some face sets with the "Draw Face Sets" brush - In the header open the Auto-Masking popover and enable "Face Set Boundary" and increase the Propagation Steps - Try to sculpt on the sphere
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Julien Kaspar changed title from Sculpt Mode: Boundary Propagation doesn't work to Regression: Boundary Propagation doesn't work 2022-11-18 13:31:57 +01:00
Author
Member

Increasing priority since this is a recent regression.

Increasing priority since this is a recent regression.
Member

Indeed regression. Thanks @JulienKaspar I didn't spot this yesterday in LTS version (can repro now) :)

Indeed regression. Thanks @JulienKaspar I didn't spot this yesterday in LTS version (can repro now) :)
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar
Member

02575bcbd0 is the first bad commit
cc @JosephEagar

02575bcbd0 is the first bad commit cc @JosephEagar

This issue was referenced by 567ae90374

This issue was referenced by 567ae90374dbe207b0cdf6b0fa1438e8bcf0a28d
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-11-20 16:18:55 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102584
No description provided.