Sculpt: fix T102584: Boundary propegation for automasking not working